[tool.poetry]
name = "score-matching-tutorials"
version = "0.1.0"
description = "Tutorial for score matching"
authors = ["Pantelis Vlachas <prvlachas@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.24"
matplotlib = "^3.8"
seaborn = "^0.13"
tqdm = "^4.66"
notebook = "^7.0"
jupyterlab = "^4.0"
torch = "^2.9.0"
scikit-learn = "^1.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ruff = "^0.6"
pytest = "^8.0"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
fix = true

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings -q"
testpaths = ["tests"]
